
# FIXME: ${THREADPOOL_IS_SINGLETON} is always on
option( THREADPOOL_IS_SINGLETON "Thread pool shall use Singleton design pattern." ON )

MESSAGE( STATUS ${THREADPOOL_IS_SINGLETON} )

if( ${THREADPOOL_IS_SINGLETON} )
	set_target_properties( ${PROJECT_NAME} PROPERTIES COMPILE_DEFINITIONS "THREADPOOL_IS_SINGLETON=true" )
else( ${THREADPOOL_IS_SINGLETON} )
	set_target_properties( ${PROJECT_NAME} PROPERTIES COMPILE_DEFINITIONS "THREADPOOL_IS_SINGLETON=false" )
endif( ${THREADPOOL_IS_SINGLETON} )

target_sources( ${PROJECT_NAME}
	PUBLIC
		"${CMAKE_CURRENT_LIST_DIR}/ThreadPool.h"
)